# movie-theater

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  conanfile.txt
.github/workflows/: ci.yml
cmake/: Doxyfile.in  MovieTheaterBookingConfig.cmake.in  run_package_consumer_test.cmake
conan/recipes/ng-log/: conanfile.py
consumer-example/: CMakeLists.txt  main.cpp
include/: booking_error.hpp  booking_service.hpp  movie.hpp  show.hpp  theater.hpp
src/: booking_error.cpp  booking_service.cpp  main.cpp  movie.cpp  show.cpp  theater.cpp
tests/include/: booking_service_fixture.hpp  show_fixture.hpp
tests/src/: test_booking_service.cpp  test_show.cpp
